convering integer and boolean improved